--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,5 +1,7 @@
 $white: #ffffff;
-$purple: #5f3ca1;
+$purple-01: #5f3ca1;
+$purple-02: rgba(123, 90, 186, 1);
+$purple-03: rgba(123, 90, 186, 0.4);
 $yellow: #ffbf00;
 $gray-01: #453f51;
 $gray-02: #5e5570;
