--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -4,7 +4,7 @@ header {
   left: 0;
   width: 100%;
   height: 11.9rem;
-  background-color: $purple;
+  background-color: $purple-01;
   display: flex;
   .container {
     @include flex(row, center, space-between);
