--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -82,13 +82,162 @@
   @include responsive(600px) {
     padding-top: 2.5rem;
     margin-top: 8rem;
-    .text {
-      h1 {
-        font-size: 4.3rem;
+    .container {
+      .text {
+        h1 {
+          font-size: 4.3rem;
+        }
       }
     }
     .image {
       left: -2.2rem;
+    }
+  }
+}
+
+.s-resources {
+  padding-top: 14.9rem;
+  padding-bottom: 9.9rem;
+  .top {
+    @include flex(row, center, space-between);
+    margin-bottom: 5.3rem;
+    h2 {
+      width: 100%;
+      max-width: 50.2rem;
+      font-family: "PT Sans", sans-serif;
+      font-style: normal;
+      font-weight: 700;
+      font-size: 3.2rem;
+      line-height: 130%;
+      color: $gray-01;
+    }
+    p {
+      font-family: "Lato", sans-serif;
+      font-style: normal;
+      font-size: 1.6rem;
+      font-weight: 500;
+      line-height: 150%;
+      color: $gray-02;
+    }
+  }
+  .content {
+    @include flex(row, flex-start, space-between);
+    .card-feature {
+      background-color: rgba(197, 190, 220, 0.1);
+      width: 100%;
+      max-width: 28rem;
+      height: 32.3rem;
+      border-radius: 1.2rem;
+      padding-top: 4.1rem;
+      padding-left: 4.2rem;
+      .icon {
+        background-color: $white;
+      }
+      .info {
+        max-width: 20.4rem;
+      }
+    }
+    .icon {
+      @include flex(row, center, center);
+      width: 6.4rem;
+      height: 6.4rem;
+      background-color: rgba(197, 190, 220, 0.1);
+      border-radius: 1.2rem;
+      margin-bottom: 3rem;
+    }
+    .info {
+      max-width: 23.9rem;
+      h4 {
+        font-family: "Lato", sans-serif;
+        font-style: normal;
+        font-weight: 800;
+        font-size: 1.8rem;
+        line-height: 2.2rem;
+        color: $purple-01;
+        margin-bottom: 2rem;
+      }
+      p {
+        font-family: "Lato";
+        font-style: normal;
+        font-weight: 400;
+        font-size: 1.6rem;
+        line-height: 165%;
+        color: $gray-02;
+      }
+    }
+    ul {
+      @include flex(row, flex-start, space-between);
+      position: relative;
+      width: 100%;
+      max-width: 90.4rem;
+      margin-top: 4.1rem;
+      padding-bottom: 6.5rem;
+      padding-left: 2rem;
+      &::after {
+        content: "";
+        position: absolute;
+        left: 0;
+        width: 100%;
+        bottom: -0.3rem;
+        height: 0.3rem;
+        background-color: rgba(95, 60, 161, 0.1);
+        border-radius: 1.2rem;
+      }
+    }
+  }
+  @include responsive(991px) {
+    .content {
+      flex-direction: column;
+      align-items: flex-start;
+      .card-feature {
+        @include flex(column, center, center);
+        max-width: 100%;
+        height: auto;
+        padding: 3rem;
+        .info {
+          max-width: 100%;
+          h4,
+          p {
+            text-align: center;
+          }
+        }
+      }
+    }
+  }
+  @include responsive(768px) {
+    padding-top: 10rem;
+    padding-bottom: 5rem;
+    .top {
+      flex-direction: column;
+      h2 {
+        text-align: center;
+        margin-bottom: 2rem;
+      }
+    }
+    .content {
+      ul {
+        gap: 2.5rem;
+      }
+    }
+  }
+  @include responsive(480px) {
+    padding-top: 6rem;
+    .content {
+      ul {
+        flex-direction: column;
+        padding-left: 0px;
+        margin-top: 3rem;
+        li {
+          @include flex(column, center, center);
+          h4,
+          p {
+            text-align: center;
+          }
+        }
+      }
+      .info {
+        max-width: 95%;
+      }
     }
   }
 }
